--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,6 +23,14 @@
         Users
       </a>
 
+      <a mat-list-item
+        routerLink="/todos"
+        routerLinkActive="drawer-list-item-active"
+        (click)="drawer.close()">
+        <mat-icon matListIcon>people</mat-icon>
+        todos
+      </a>
+
     </mat-nav-list>
   </mat-sidenav>
 
