--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -5,11 +5,35 @@
       <mat-card-title class="todo-list-title">Todos</mat-card-title>
       <mat-card-content class="flex-col">
         <!--Filters go here-->
+        <div class="flex-row gap-10 flex-wrap">
+          <!-- Both Body, Category, Owner are filtered in Angular-->
+          <mat-form-field class="input-field">
+            <mat-label>Body</mat-label>
+            <input matInput data-test="todoBodyInput" placeholder="Filter by Body"
+            [(ngModel)]="todoBody" (input)="updateFilter()">
+            <mat-hint>Filtered on client</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field class="input-field">
+            <mat-label>Category</mat-label>
+            <input matInput data-test="todoCategoryInput" placeholder="Filter by Category"
+            [(ngModel)]="todoCategory" (input)="updateFilter()">
+            <mat-hint>Filtered on Client</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field class="input-field">
+            <mat-label>Owner</mat-label>
+            <input matInput data-test="todoOwnerInput" placeholder="Filter by Owner"
+            [(ngModel)]="todoOwner" (input)="updateFilter()">
+            <mat-hint>Filtered on Client</mat-hint>
+          </mat-form-field>
+
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
-<!--
+
 <mat-card appearance="outlined">
   <mat-card-content>
     <mat-nav-list class="todo-nav-list">
@@ -22,6 +46,6 @@
   </mat-nav-list>
 </mat-card-content>
 </mat-card>
--->
+
 
 
