--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -5,6 +5,22 @@
       <mat-card-title class="todo-list-title">Todos</mat-card-title>
       <mat-card-content class="flex-col">
         <!--Filters go here-->
+        <!--Status is filtered using the database-->
+        <div class="flex-row gap flex-wrap">
+          <mat-form-field class="input-field">
+            <mat-label>Status<mat-label>
+            <mat-select (selectionChange)="getTodosFromServer()" [(ngModel)]="todoStatus" data-test="todoStatusSelect">
+              <mat-option>--</mat-option>
+              <mat-option value="Complete">Complete</mat-option>
+              <mat-option value="Incomplete">Incomplete</mat-option>
+            </mat-select>
+            <mat-hint>Filtered on server</mat-hint>
+          </mat-label>
+          </mat-label>
+          </mat-form-field>
+        </div>
+
+
         <div class="flex-row gap-10 flex-wrap">
           <!-- Both Body, Category, Owner are filtered in Angular-->
           <mat-form-field class="input-field">
@@ -34,18 +50,20 @@
   </div>
 </div>
 
-<mat-card appearance="outlined">
-  <mat-card-content>
-    <mat-nav-list class="todo-nav-list">
-      <h3 mat-subheader>Todos</h3>
-      <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo._id]" class="todo-list-item">
-        <span matListItemTitle class="todo-list-owner">{{todo.owner.toUpperCase()}}</span>
-        <span matListItemLine class="todo-list-category"><b>Category: </b>{{todo.category}}</span>
-        <span matListItemBody class="todo-list-body"><b>Body: </b>{{todo.body}}</span>
-        </a>
-  </mat-nav-list>
-</mat-card-content>
-</mat-card>
+<!--List view-->
+    <mat-card appearance="outlined">
+      <mat-card-content>
+        <mat-nav-list class="todo-nav-list">
+          <h3 mat-subheader>Todos</h3>
+          <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo._id]" class="todo-list-item">
+            <span matListItemTitle class="todo-list-owner">{{todo.owner.toUpperCase()}}</span>
+            <span matListItemLine class="todo-list-category"><b>Category: </b>{{todo.category}}</span>
+            <span matListItemBody class="todo-list-body"><b>Body: </b>{{todo.body}}</span>
+            </a>
+      </mat-nav-list>
+    </mat-card-content>
+    </mat-card>
+
 
 
 
