--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -56,6 +56,7 @@
             <span matListItemTitle class="todo-list-owner">{{todo.owner.toUpperCase()}}</span>
             <span matListItemLine class="todo-list-category"><b>Category: </b>{{todo.category}}</span>
             <span matListItemBody class="todo-list-body"><b>Body: </b>{{todo.body}}</span>
+            <span matListItemLine class="todo-list-status"><b>Todo Completion: </b>{{todo.status}}</span>
             </a>
       </mat-nav-list>
     </mat-card-content>
