--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -46,6 +46,14 @@
     </mat-card>
   </div>
 </div>
+<div class="container-fluid">
+  <h1>Limit the Number of Todos</h1>
+  <form>
+    <label for="limit">Limit:</label>
+    <input type="number" id="limit" name="limit" [(ngModel)]="limit" placeholder="Enter limit">
+    <button type="button" class="btn btn-primary" (click)="getTodosFromServer()">Get Todos</button>
+  </form>
+</div>
 
 <!--List view-->
     <mat-card appearance="outlined">
