--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -46,13 +46,15 @@
     </mat-card>
   </div>
 </div>
+
 <div class="container-fluid">
+<mat-form-field class="input-field">
+
   <h1>Limit the Number of Todos</h1>
-  <form>
     <label for="limit">Limit:</label>
-    <input type="number" id="limit" name="limit" [(ngModel)]="limit" placeholder="Enter limit">
-    <button type="button" class="btn btn-primary" (click)="getTodosFromServer()">Get Todos</button>
-  </form>
+    <input matInput data-test="todoLimitInput" placeholder="Filter by Limit"
+    [(ngModel)]="getLimitedTodos" (input)="updateFilter()">
+  </mat-form-field>
 </div>
 
 <!--List view-->
